# remap

./: .gitignore  Makefile.am  coll_remap.h  coll_remap_allreduce.c  coll_remap_allreduce_cuda_opt.c  coll_remap_bcast.c  coll_remap_component.c  coll_remap_module.c  coll_remap_scotch.c  coll_remap_scotch.h  coll_remap_topo_info.c  run_ar_test.sh  run_bc_test.sh
get_net_mat/: beluga.gv  beluga_ibnetdiscover.txt  beluga_topology.conf  cedar.gv  cedar_topology.conf  gen_net_mat.py  gen_net_mat_cedar.py.old  graham_topology.conf  remap_mat_blg.txt
kernel/: kernel.cu  kernel.h
remap_tests/: ar_gpu_val.c  ar_gpu_val.sh  ar_val.c  ar_val.sh  bcast_val.c  bcast_val.sh  single_ar.c  single_ar.sh  single_bc.c  single_bc.sh  tst_ar.sh  tst_bc.sh
